# mpv-debug-plugin

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: debug.h
src/: debug.cpp  debug.h  main.cpp  main.h
